# aida_widget_integration

./: AUTHENTICATION_FIX.md  INSTALLATION.md  MANIFEST.in  PACKAGING_FIX.md  README.md  SERVER_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  deploy_to_server.py  diagnose_doctype.py  fix_doctype_issue.py  pyproject.toml  setup.py
aida_widget_integration/: api.py  hooks.py  install.py  patches.txt  test_widget.py
aida_widget_integration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aida_widget_integration/aida_widget_integration/: modules.txt  patches.txt
aida_widget_integration/aida_widget_integration/config/: aida_widget_integration.py
aida_widget_integration/aida_widget_integration/doctype/aida_widget_settings/: aida_widget_settings.json  aida_widget_settings.py
aida_widget_integration/aida_widget_integration/patches/v1_0/: create_aida_widget_settings.py
aida_widget_integration/doctype/aida_widget_settings/: __init__.py
aida_widget_integration/public/css/: aida_chat_widget.css
aida_widget_integration/public/js/: aida_chat_widget.js
aida_widget_integration/www/: aida_chat_widget.css  aida_chat_widget.js  widget_test.html
public/js/: aida_chat_widget.js
